--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-jss": "^8.4.0"
   },
   "keywords": [
     "gatsby"
